Added discussion and conclusion

--- a/Thesis/diagrams/temptate.tex
+++ b/Thesis/diagrams/temptate.tex
@@ -27,6 +27,8 @@
 \tikzstyle{colmarking} = [C0,line width=1.5pt]
 \def\colortext{C0}
 
+\usepackage{pdfrender}
+
 \input{systems.tex}
 \newcommand{\m}{x}
 
