--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -551,7 +551,6 @@ date = {2019-03-21}
 	institution = {{arXiv}},
 	author = {Krizhevsky, Alex},
 	date = {2014-04-26},
-	doi = {10.48550/arXiv.1404.5997},
 	eprinttype = {arxiv},
 	eprint = {1404.5997 [cs]},
 	note = {type: article},
@@ -574,8 +573,6 @@ date = {2019-03-21}
 	shortjournal = {Math. Comp.},
 	author = {Knuth, Donald E.},
 	date = {1993},
-	eprinttype = {arxiv},
-	eprint = {math/9207222},
 	keywords = {Mathematics - Classical Analysis and {ODEs}},
 	file = {arXiv Fulltext PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/PANLLL86/Knuth - 1993 - Johann Faulhaber and sums of powers.pdf:application/pdf;arXiv.org Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/G34Y9M2U/9207222.html:text/html},
 }
@@ -649,4 +646,91 @@ date = {2019-03-21}
 	date = {2007-07-01},
 	langid = {english},
 	keywords = {Balancing threshold, Fiedler vector, Gene expression, Graph Laplacian, Maximum likelihood, Microarray, Partitioning, Random graph, Rayleigh–Ritz Theorem, Scaling},
+}
+
+@book{strang_computational_2007,
+	location = {Wellesley, Ma.},
+	title = {Computational science and engineering},
+	isbn = {978-0-9614088-1-7},
+	pagetotal = {{XI}, 735 S.},
+	publisher = {Wellesley-Cambridge Press},
+	author = {Strang, Gilbert},
+	date = {2007},
+	file = {TUM OPAC:/home/stephan/snap/zotero-snap/common/Zotero/storage/DF3LT2U9/singleHit.html:text/html},
+}
+
+@article{Schwartz_green_2020,
+author = {Schwartz, Roy and Dodge, Jesse and Smith, Noah A. and Etzioni, Oren},
+title = {Green AI},
+year = {2020},
+issue_date = {2020},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {63},
+number = {12},
+issn = {0001-0782},
+doi = {10.1145/3381831},
+abstract = {Creating efficiency in AI research will decrease its carbon footprint and increase its inclusivity as deep learning study should not require the deepest pockets.},
+journal = {Commun. ACM},
+month = {nov},
+pages = {54–63},
+numpages = {10}
+}
+
+
+@article{martin_implicit_2021,
+	title = {Implicit Self-Regularization in Deep Neural Networks: Evidence from Random Matrix Theory and Implications for Learning},
+	volume = {22},
+	url = {http://jmlr.org/papers/v22/20-410.html},
+	pages = {1--73},
+	number = {165},
+	journaltitle = {Journal of Machine Learning Research},
+	author = {Martin, Charles H. and Mahoney, Michael W.},
+	date = {2021},
+}
+  
+@article{papyan_traces_2020,
+	title = {Traces of Class/Cross-Class Structure Pervade Deep Learning Spectra},
+	volume = {21},
+	issn = {1533-7928},
+	url = {http://jmlr.org/papers/v21/20-933.html},
+	abstract = {Numerous researchers recently applied empirical spectral analysis to the study of modern deep learning classifiers. We identify and discuss an important formal class/cross-class structure and show how it lies at the origin of the many visually striking features observed in deep neural network spectra, some of which were reported in recent articles, others are unveiled here for the first time. These include spectral outliers, “spikes”, and small but distinct continuous distributions, “bumps”, often seen beyond the edge of a “main bulk”.},
+	pages = {1--64},
+	number = {252},
+	journaltitle = {Journal of Machine Learning Research},
+	author = {Papyan, Vardan},
+	date = {2020},
+}
+
+
+@article{diepold_optic_2004,
+	title = {Optic flow computation and time-varying system theory},
+	issn = {90-5682-517-8},
+	pages = {1--7},
+	journaltitle = {{MTNS} 2004; Proceedings sixteenth international symposium on mathematical theory of networks and systems},
+	author = {Diepold, K and Dewilde, {PM} and Bamberger, W},
+	editor = {de Moor, B and Motmans, B},
+	date = {2004},
+	note = {Place: Leuven
+Publisher: Katholieke Universiteit Leuven},
+	keywords = {Conf.proc. {\textgreater} 3 pag},
+}
+
+
+@article{brand_fast_2006,
+	title = {Fast low-rank modifications of the thin singular value decomposition},
+	volume = {415},
+	issn = {0024-3795},
+	doi = {10.1016/j.laa.2005.07.021},
+	series = {Special Issue on Large Scale Linear and Nonlinear Eigenvalue Problems},
+	abstract = {This paper develops an identity for additive modifications of a singular value decomposition ({SVD}) to reflect updates, downdates, shifts, and edits of the data matrix. This sets the stage for fast and memory-efficient sequential algorithms for tracking singular values and subspaces. In conjunction with a fast solution for the pseudo-inverse of a submatrix of an orthogonal matrix, we develop a scheme for computing a thin {SVD} of streaming data in a single pass with linear time complexity: A rank-r thin {SVD} of a p×q matrix can be computed in O(pqr) time for r⩽min(p,q).},
+	pages = {20--30},
+	number = {1},
+	journaltitle = {Linear Algebra and its Applications},
+	shortjournal = {Linear Algebra and its Applications},
+	author = {Brand, Matthew},
+	date = {2006-05-01},
+	langid = {english},
+	keywords = {Singular value decomposition, Sequential updating, Subspace tracking, update {SVD}},
+	file = {ScienceDirect Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/N5D86QZ6/Brand - 2006 - Fast low-rank modifications of the thin singular v.pdf:application/pdf;ScienceDirect Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/9TTM757R/S0024379505003812.html:text/html},
 }
